test/corpus/operations.txt
===
Operations
===

420 + 69 # Basic binary operation
4 + 2 + 0 # Left associativity
4 + 2 * 0 # Operator precedence

---

(source_file
	(statement
		(expression
			(binary_expression
				(expression
					(literal
						(number)
					)
				)
				(additive_operator)
				(expression
					(literal
						(number)
					)
				)
			)
		)
	)
	(comment)
	(statement
		(expression
			(binary_expression
				(expression
					(binary_expression
						(expression
							(literal
								(number)
							)
						)
						(additive_operator)
						(expression
							(literal
								(number)
							)
						)
					)
				)
				(additive_operator)
				(expression
					(literal
						(number)
					)
				)
			)
		)
	)
	(comment)
	(statement
		(expression
			(binary_expression
				(expression
					(literal
						(number)
					)
				)
				(additive_operator)
				(expression
					(binary_expression
						(expression
							(literal
								(number)
							)
						)
						(multiplicative_operator)
						(expression
							(literal
								(number)
							)
						)
					)
				)
			)
		)
	)
	(comment)
)
